--- a/Exo2/app/src/main/res/layout/fragment_blank_fragment2.xml
+++ b/Exo2/app/src/main/res/layout/fragment_blank_fragment2.xml
@@ -13,6 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="94dp"
+            android:layout_marginBottom="50dp"
+            android:text="L'Auteur:"
+            android:textSize="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/auteurl"
+            app:layout_constraintEnd_toStartOf="@+id/imagel"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/imagel"
             android:layout_width="135dp"
@@ -32,10 +48,10 @@
             android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/descriptionl"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.199"
+            app:layout_constraintHorizontal_bias="0.139"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.606" />
+            app:layout_constraintVertical_bias="0.41" />
 
         <TextView
             android:id="@+id/descriptionl"
