--- a/Exo3/app/src/main/res/layout/activity_main.xml
+++ b/Exo3/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,16 @@
     >
 
 
-        <fragment
+
+        <LinearLayout
+
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+         <fragment
             android:id="@+id/nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
@@ -20,5 +29,5 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/mobile_navigation" />
 
-
+        </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
